<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8C7FA"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:background="#A30AEB"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="Settings"
            android:textAlignment="center"
            android:textColor="#E1BEE7"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:paddingTop="10dp"
            android:text="@string/theme"
            android:textAlignment="center"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="#E90AEB"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:text="@string/light"
                android:textColor="#263238"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="#FAC7E7"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:text="@string/button"
                android:textColor="#757575"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>