<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        tools:context=".second_main">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="#A30AEB"
            android:paddingTop="10dp"
            android:text="@string/_3d_library"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:layout_marginTop="84dp"
            android:src="@drawable/animal"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="ContentDescription,HardcodedText" />

        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/animals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.772"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"

            android:src="@drawable/plant"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:text="@string/plants"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/arch"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button7"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:text="@string/architecture"
            app:layout_constraintEnd_toEndOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/tools"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button8"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:text="@string/tools"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/body_parts"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button9"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:text="@string/body_parts"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/homebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="HOME"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

